--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
     <script src="%PUBLIC_URL%/vendors/timepicker/bootstrap-timepicker.min.js"></script>
     <script src="%PUBLIC_URL%/vendors/hc-sticky/hc-sticky.min.js"></script>
     <script src="%PUBLIC_URL%/vendors/jparallax/TweenMax.min.js"></script>
-    <!-- <script src="%PUBLIC_URL%/vendors/mapbox-gl/mapbox-gl.js"></script> -->
+    <script src="%PUBLIC_URL%/vendors/mapbox-gl/mapbox-gl.js"></script>
     <script src="%PUBLIC_URL%/vendors/dataTables/jquery.dataTables.min.js"></script>
     
     <!-- Theme scripts -->
