Wishlist : Fetch Details

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/vendors/timepicker/bootstrap-timepicker.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/vendors/mapbox-gl/mapbox-gl.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/vendors/dataTables/jquery.dataTables.min.css" />
+    <link rel="stylesheet" href="bs-stepper.min.css">
+
 
     <!-- Themes core CSS -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/themes.css" />
