--- a/public/index.html
+++ b/public/index.html
@@ -490,6 +490,8 @@
       <script src="%PUBLIC_URL%/vendors/hc-sticky/hc-sticky.min.js"></script>
       <script src="%PUBLIC_URL%/vendors/jparallax/TweenMax.min.js"></script>
       <script src="%PUBLIC_URL%/vendors/mapbox-gl/mapbox-gl.js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBYmJujloM3zNdxMpokW1G_Qo5Qo_05_A&libraries=places"></script>
+
       
       <!-- Theme scripts -->
       <script src="%PUBLIC_URL%/js/theme.js"></script>
