--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/images/logo/icon-white.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Easily find the closes student accomodation around you."
-    />
+    <meta name="description" content="Easily find the closes student accomodation around you." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="%PUBLIC_URL%/vendors/fontawesome-pro-5/css/all.css" />
@@ -35,7 +31,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/themes.css" />
     
     <!-- Favicons -->
-    <!-- <link rel="icon" href="%PUBLIC_URL%/images/logo/main.png" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/images/logo/main.png" />
+    
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@">
