--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&family=Montserrat:wght@500&display=swap" rel="stylesheet">
 
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="%PUBLIC_URL%/vendors/fontawesome-pro-5/css/all.css" />
@@ -29,6 +32,8 @@
     <!-- Themes core CSS -->
     <link rel="stylesheet" href="%PUBLIC_URL%/vendors/bootstrap-select/css/bootstrap-select.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/themes.css" />
+    
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/custom-app.css" />
     
     <!-- Favicons -->
     <link rel="icon" href="%PUBLIC_URL%/images/logo/main.png" />
