Overhaul Auth System

--- a/public/index.html
+++ b/public/index.html
@@ -5,29 +5,28 @@
     <link rel="icon" href="%PUBLIC_URL%/images/logo/icon-white.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Easily find the closes student accomodation around you." />
+    <meta name="description" content="Easily find the closes student accomodation around you."/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Google fonts -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&family=Montserrat:wght@500&display=swap" rel="stylesheet">
 
     <!-- Vendors CSS -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/vendors/fontawesome-pro-5/css/all.css" />
+    <link rel="stylesheet"  href="%PUBLIC_URL%/vendors/fontawesome-pro-5/css/all.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/vendors/slick/slick.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/vendors/magnific-popup/magnific-popup.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/vendors/jquery-ui/jquery-ui.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/vendors/chartjs/Chart.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/vendors/dropzone/css/dropzone.min.css" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/vendors/animate.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendors/animate.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/vendors/timepicker/bootstrap-timepicker.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/vendors/dataTables/jquery.dataTables.min.css" />
     <link rel="stylesheet" href="bs-stepper.min.css">
-
 
     <!-- Themes core CSS -->
     <link rel="stylesheet" href="%PUBLIC_URL%/vendors/bootstrap-select/css/bootstrap-select.min.css" />
@@ -475,25 +474,25 @@
     </div>
     
       <!-- Vendors scripts -->
-      <script src="%PUBLIC_URL%/vendors/jquery.min.js"></script>
-      <script src="%PUBLIC_URL%/vendors/jquery-ui/jquery-ui.min.js"></script>
-      <script src="%PUBLIC_URL%/vendors/dataTables/jquery.dataTables.min.js"></script>
-      <script src="%PUBLIC_URL%/vendors/bootstrap/bootstrap.bundle.js"></script>
-      <script src="%PUBLIC_URL%/vendors/slick/slick.min.js"></script>
-      <script src="%PUBLIC_URL%/vendors/waypoints/jquery.waypoints.min.js"></script>
-      <script src="%PUBLIC_URL%/vendors/counter/countUp.js"></script>
-      <script src="%PUBLIC_URL%/vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
-      <script src="%PUBLIC_URL%/vendors/chartjs/Chart.min.js"></script>
-      <script src="%PUBLIC_URL%/vendors/dropzone/js/dropzone.min.js"></script>
-      <script src="%PUBLIC_URL%/vendors/timepicker/bootstrap-timepicker.min.js"></script>
-      <script src="%PUBLIC_URL%/vendors/hc-sticky/hc-sticky.min.js"></script>
-      <script src="%PUBLIC_URL%/vendors/jparallax/TweenMax.min.js"></script>
-      <script src="%PUBLIC_URL%/vendors/mapbox-gl/mapbox-gl.js"></script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBYmJujloM3zNdxMpokW1G_Qo5Qo_05_A&libraries=places"></script>
-      <script src="%PUBLIC_URL%/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
+      <script src="%PUBLIC_URL%/vendors/jquery.min.js" async></script>
+      <script src="%PUBLIC_URL%/vendors/jquery-ui/jquery-ui.min.js" async></script>
+      <script src="%PUBLIC_URL%/vendors/dataTables/jquery.dataTables.min.js" async></script>
+      <script src="%PUBLIC_URL%/vendors/bootstrap/bootstrap.bundle.js" async></script>
+      <script src="%PUBLIC_URL%/vendors/slick/slick.min.js" async></script>
+      <script src="%PUBLIC_URL%/vendors/waypoints/jquery.waypoints.min.js" async></script>
+      <script src="%PUBLIC_URL%/vendors/counter/countUp.js" async></script>
+      <script src="%PUBLIC_URL%/vendors/magnific-popup/jquery.magnific-popup.min.js" async></script>
+      <script src="%PUBLIC_URL%/vendors/chartjs/Chart.min.js" async></script>
+      <script src="%PUBLIC_URL%/vendors/dropzone/js/dropzone.min.js" async></script>
+      <script src="%PUBLIC_URL%/vendors/timepicker/bootstrap-timepicker.min.js" async></script>
+      <script src="%PUBLIC_URL%/vendors/hc-sticky/hc-sticky.min.js" async></script>
+      <script src="%PUBLIC_URL%/vendors/jparallax/TweenMax.min.js" async></script>
+      <script src="%PUBLIC_URL%/vendors/mapbox-gl/mapbox-gl.js" async></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBYmJujloM3zNdxMpokW1G_Qo5Qo_05_A&libraries=places" async></script>
+      <script src="%PUBLIC_URL%/vendors/bootstrap-select/js/bootstrap-select.min.js" async ></script>
   
       <!-- Theme scripts -->
-      <script src="%PUBLIC_URL%/js/theme.js"></script>
+      <script src="%PUBLIC_URL%/js/theme.js" async></script>
   </body>
   
 </html>
