--- a/public/index.html
+++ b/public/index.html
@@ -246,6 +246,29 @@
         </div>
       </div>
     </div>
+
+        <!-- Vendors scripts -->
+        <script src="%PUBLIC_URL%/vendors/jquery.min.js"></script>
+        <script src="%PUBLIC_URL%/vendors/jquery-ui/jquery-ui.min.js"></script>
+        <script src="%PUBLIC_URL%/vendors/dataTables/jquery.dataTables.min.js"></script>
+        <script src="%PUBLIC_URL%/vendors/bootstrap/bootstrap.bundle.js"></script>
+        <script src="%PUBLIC_URL%/vendors/slick/slick.min.js"></script>
+        <script src="%PUBLIC_URL%/vendors/waypoints/jquery.waypoints.min.js"></script>
+        <script src="%PUBLIC_URL%/vendors/counter/countUp.js"></script>
+        <script src="%PUBLIC_URL%/vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
+        <script src="%PUBLIC_URL%/vendors/chartjs/Chart.min.js" ></script>
+        <script src="%PUBLIC_URL%/vendors/dropzone/js/dropzone.min.js"></script>
+        <script src="%PUBLIC_URL%/vendors/timepicker/bootstrap-timepicker.min.js"></script>
+        <script src="%PUBLIC_URL%/vendors/hc-sticky/hc-sticky.min.js"></script>
+        <script src="%PUBLIC_URL%/vendors/jparallax/TweenMax.min.js"></script>
+        <script src="%PUBLIC_URL%/vendors/mapbox-gl/mapbox-gl.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBYmJujloM3zNdxMpokW1G_Qo5Qo_05_A&libraries=places"></script>
+        <script src="%PUBLIC_URL%/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
+    
+        <!-- Theme scripts -->
+        <script src="%PUBLIC_URL%/js/theme.js"></script>
+
+
     <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1"
      xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <defs>
@@ -473,26 +496,7 @@
             class="fal fa-arrow-up"></i></a>
     </div>
     
-      <!-- Vendors scripts -->
-      <script src="%PUBLIC_URL%/vendors/jquery.min.js" async></script>
-      <script src="%PUBLIC_URL%/vendors/jquery-ui/jquery-ui.min.js" async></script>
-      <script src="%PUBLIC_URL%/vendors/dataTables/jquery.dataTables.min.js" async></script>
-      <script src="%PUBLIC_URL%/vendors/bootstrap/bootstrap.bundle.js" async></script>
-      <script src="%PUBLIC_URL%/vendors/slick/slick.min.js" async></script>
-      <script src="%PUBLIC_URL%/vendors/waypoints/jquery.waypoints.min.js" async></script>
-      <script src="%PUBLIC_URL%/vendors/counter/countUp.js" async></script>
-      <script src="%PUBLIC_URL%/vendors/magnific-popup/jquery.magnific-popup.min.js" async></script>
-      <script src="%PUBLIC_URL%/vendors/chartjs/Chart.min.js" async></script>
-      <script src="%PUBLIC_URL%/vendors/dropzone/js/dropzone.min.js" async></script>
-      <script src="%PUBLIC_URL%/vendors/timepicker/bootstrap-timepicker.min.js" async></script>
-      <script src="%PUBLIC_URL%/vendors/hc-sticky/hc-sticky.min.js" async></script>
-      <script src="%PUBLIC_URL%/vendors/jparallax/TweenMax.min.js" async></script>
-      <script src="%PUBLIC_URL%/vendors/mapbox-gl/mapbox-gl.js" async></script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBYmJujloM3zNdxMpokW1G_Qo5Qo_05_A&libraries=places" async></script>
-      <script src="%PUBLIC_URL%/vendors/bootstrap-select/js/bootstrap-select.min.js" async ></script>
-  
-      <!-- Theme scripts -->
-      <script src="%PUBLIC_URL%/js/theme.js" async></script>
+
   </body>
   
 </html>
