--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/images/logo/icon-white.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Easily find the closes student accomodation around you."/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="We're using technology to take the housing and real estate industry into the modern age"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo/icon-white.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
