--- a/public/index.html
+++ b/public/index.html
@@ -38,21 +38,21 @@
     <link rel="icon" href="%PUBLIC_URL%/images/logo/main.png" />
     
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@">
-    <meta name="twitter:creator" content="@">
-    <meta name="twitter:title" content="Home 01">
-    <meta name="twitter:description" content="Real Estate Html Template">
-    <meta name="twitter:image" content="images/homeid-social-logo.png">
+                <meta name="twitter:card" content="summary" />
+                <meta name="twitter:site" content="@" />
+                <meta name="twitter:creator" content="@" />
+                <meta name="twitter:title" content="Bayof - Take ownership of landed property, globally" />
+                <meta name="twitter:description" content="We're using technology to take the housing and real estate industry into the modern age" />
     <!-- Facebook -->
-    <meta property="og:url" content="home-01.html">
-    <meta property="og:title" content="Home 01">
-    <meta property="og:description" content="Real Estate Html Template">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="images/homeid-social.png">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
+                <meta property="og:url" content={process.env.REACT_APP_API_URL} />
+                <meta property="og:title" content="Take ownership of landed property, globally" />
+                <meta property="og:description" content="We're using technology to take the real estate industry into the future" />
+                <meta property="og:type" content="website" />
+                {/* <meta property="og:image" content="/images/homeid-social.png" /> */}
+                <meta property="og:image:type" content="image/png" />
+                <meta property="og:image:width" content="1200" />
+                <meta property="og:image:height" content="630" />
+                <meta name="description" content="We're using technology to take the real estate industry into the future" />
     
     <title>Bayof - Quick and Easy Real Estate</title>
 
