--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       rel="stylesheet"
     />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&family=Montserrat:wght@500&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet"> -->
 
     <!-- Vendors CSS -->
     <link
