Editing writeups on tenant profile

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
       content="We're using technology to take the real estate industry into the future"
     />
 
-    <title>Bayof - Quick and Easy Real Estate</title>
+    <title>Bayof - Property Ownership</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
